fix: corriger le nom de domaine dans la configuration Nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name harmoneyz.com www.harmoneyz.com;;
 
     # Compression gzip pour améliorer les performances
     gzip on;
